force-app/main/default/objects/Time_Management__c/Time_Management__c.object-meta.xml
<CustomObject>
    <label>Time Management</label>
    <nameField>
        <displayFormat>TM-{0000}</displayFormat>
        <label>Time Management Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>