force-app/main/default/objects/Time_Management__c/fields/Allowed_hours_on_JOB__c.field-meta.xml
<CustomField>
    <fullName>Allowed_hours_on_JOB__c</fullName>
    <formula>Related_Work_Order_Job__r.No_of_Labors__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allowed hours on JOB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>