force-app/main/default/objects/Time_Management__c/fields/Billed_Hour__c.field-meta.xml
<CustomField>
    <fullName>Billed_Hour__c</fullName>
    <label>Billed Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>