force-app/main/default/objects/Time_Management__c/fields/Canned_Response_to_the_Customer__c.field-meta.xml
<CustomField>
    <fullName>Canned_Response_to_the_Customer__c</fullName>
    <label>Canned Response to the Customer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>