force-app/main/default/objects/Time_Management__c/fields/Clock_In__c.field-meta.xml
<CustomField>
    <fullName>Clock_In__c</fullName>
    <label>Clock In</label>
    <type>DateTime</type>
</CustomField>