force-app/main/default/objects/Time_Management__c/fields/Clock_Out__c.field-meta.xml
<CustomField>
    <fullName>Clock_Out__c</fullName>
    <label>Clock Out</label>
    <type>DateTime</type>
</CustomField>