force-app/main/default/objects/Time_Management__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Time Management</relationshipLabel>
    <relationshipName>Time_Management</relationshipName>
    <type>Lookup</type>
</CustomField>