force-app/main/default/objects/Time_Management__c/fields/Day_In__c.field-meta.xml
<CustomField>
    <fullName>Day_In__c</fullName>
    <description>Date/time for user day in.</description>
    <label>Day In</label>
    <type>DateTime</type>
</CustomField>