force-app/main/default/objects/Time_Management__c/fields/Day_Out__c.field-meta.xml
<CustomField>
    <fullName>Day_Out__c</fullName>
    <description>Date/Time for user day out.</description>
    <label>Day Out</label>
    <type>DateTime</type>
</CustomField>