force-app/main/default/objects/Time_Management__c/fields/End_Schedule_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Schedule_Date_Time__c</fullName>
    <label>End Schedule Date/Time</label>
    <type>DateTime</type>
</CustomField>