force-app/main/default/objects/Time_Management__c/fields/Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Id__c</fullName>
    <description>This field is to store the related standard event Id.</description>
    <label>Event Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>