force-app/main/default/objects/Time_Management__c/fields/Hide_From_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Hide_From_Calendar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide From Calendar</label>
    <type>Checkbox</type>
</CustomField>