force-app/main/default/objects/Time_Management__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Inventory__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>New Boats, Used Boats</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Time Management</relationshipLabel>
    <relationshipName>Time_Management</relationshipName>
    <type>Lookup</type>
</CustomField>