force-app/main/default/objects/Time_Management__c/fields/Lunch_In__c.field-meta.xml
<CustomField>
    <fullName>Lunch_In__c</fullName>
    <description>Date/Time for User lunch out</description>
    <label>Lunch In</label>
    <type>DateTime</type>
</CustomField>