force-app/main/default/objects/Time_Management__c/fields/Lunch_Out__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Out__c</fullName>
    <description>Date/Time for user lunch in.</description>
    <label>Lunch Out</label>
    <type>DateTime</type>
</CustomField>