force-app/main/default/objects/Time_Management__c/fields/Number_of_Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Hours_Worked__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Hours Worked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>