force-app/main/default/objects/Time_Management__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Time Management</relationshipLabel>
    <relationshipName>Time_Management</relationshipName>
    <type>Lookup</type>
</CustomField>