force-app/main/default/objects/Time_Management__c/fields/Related_to_Job__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Specifies the Job to which the record is associated with.</inlineHelpText>
    <label>Related to Job(Deprecated)</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Time Management</relationshipLabel>
    <relationshipName>Time_Management</relationshipName>
    <type>Lookup</type>
</CustomField>