force-app/main/default/objects/Time_Management__c/fields/Related_Work_Order_Job__c.field-meta.xml
<CustomField>
    <fullName>Related_Work_Order_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Work Order Job</label>
    <referenceTo>Work_Order_Job__c</referenceTo>
    <relationshipLabel>Time Management</relationshipLabel>
    <relationshipName>Time_Management</relationshipName>
    <type>Lookup</type>
</CustomField>