force-app/main/default/objects/Time_Management__c/fields/Schedule_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Date_Time__c</fullName>
    <label>Start Schedule Date/Time</label>
    <type>DateTime</type>
</CustomField>