force-app/main/default/objects/Time_Management__c/fields/Service_Location__c.field-meta.xml
<CustomField>
    <fullName>Service_Location__c</fullName>
    <label>Service Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Slot 1</fullName>
            </value>
            <value>
                <fullName>Slot 2</fullName>
            </value>
            <value>
                <fullName>Slot 3</fullName>
            </value>
            <value>
                <fullName>Slot 4</fullName>
            </value>
            <value>
                <fullName>Slot 5</fullName>
            </value>
            <value>
                <fullName>Slot 6</fullName>
            </value>
            <value>
                <fullName>Slot 7</fullName>
            </value>
            <value>
                <fullName>Slot 8</fullName>
            </value>
            <value>
                <fullName>Slot 9</fullName>
            </value>
            <value>
                <fullName>Slot 10</fullName>
            </value>
            <value>
                <fullName>Slot 11</fullName>
            </value>
            <value>
                <fullName>Slot 12</fullName>
            </value>
            <value>
                <fullName>Slot 13</fullName>
            </value>
            <value>
                <fullName>Slot 14</fullName>
            </value>
            <value>
                <fullName>Slot 15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>