force-app/main/default/objects/Time_Management__c/fields/Service_writer_comment__c.field-meta.xml
<CustomField>
    <fullName>Service_writer_comment__c</fullName>
    <label>Service Writer comment</label>
    <type>TextArea</type>
</CustomField>