force-app/main/default/objects/Time_Management__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Specifies the Status of the task under progress.</inlineHelpText>
    <label>Comments/Status</label>
    <type>TextArea</type>
</CustomField>