force-app/main/default/objects/Time_Management__c/fields/Technician_Efficiency__c.field-meta.xml
<CustomField>
    <fullName>Technician_Efficiency__c</fullName>
    <formula>( Allowed_hours_on_JOB__c  /  Working_Hours__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technician Efficiency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>