force-app/main/default/objects/Time_Management__c/fields/Total_Work__c.field-meta.xml
<CustomField>
    <fullName>Total_Work__c</fullName>
    <formula>((Clock_Out__c- Clock_In__c) *1440)/60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Work(Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>