force-app/main/default/objects/Time_Management__c/fields/Worked_Hour_For_Completed_Job__c.field-meta.xml
<CustomField>
    <fullName>Worked_Hour_For_Completed_Job__c</fullName>
    <description>For Standard Time Management</description>
    <label>Worked Hour For Completed Job</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>