force-app/main/default/objects/Time_Management__c/recordTypes/Schedule.recordType-meta.xml
<RecordType>
    <fullName>Schedule</fullName>
    <active>true</active>
    <label>Schedule</label>
</RecordType>