force-app/main/default/objects/Time_Management__c/recordTypes/Standard_Time_Sheet.recordType-meta.xml
<RecordType>
    <fullName>Standard_Time_Sheet</fullName>
    <active>true</active>
    <label>Standard Time Sheet</label>
</RecordType>