force-app/main/default/objects/Time_Management__c/recordTypes/Time_Management_for_Jobs.recordType-meta.xml
<RecordType>
    <fullName>Time_Management_for_Jobs</fullName>
    <active>true</active>
    <label>Time Management for Jobs</label>
</RecordType>