force-app/main/default/objects/Time_Management__c/validationRules/Valid_Clock_In_Clock_Out_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Clock_In_Clock_Out_Time</fullName>
    <active>true</active>
    <errorConditionFormula>Clock_In__c &gt; Clock_Out__c</errorConditionFormula>
    <errorMessage>Clock In Time should be before Clock Out Time.</errorMessage>
</ValidationRule>