force-app/main/default/objects/Time_Management__c/listViews/Time_Management_for_Jobs.listView-meta.xml
<ListView>
    <fullName>Time_Management_for_Jobs</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Clock_In__c</columns>
    <columns>Clock_Out__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Work_Order__c</columns>
    <columns>Technician__c</columns>
    <columns>Day_In__c</columns>
    <columns>Day_Out__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Time_Management__c.Time_Management_for_Jobs</value>
    </filters>
    <label>Time Management for Jobs</label>
</ListView>